interview questions and research

--- a/Interview-Questions/interview_questions_05-04-2025.ipynb
+++ b/Interview-Questions/interview_questions_05-04-2025.ipynb
@@ -55,6 +55,24 @@
    "cell_type": "markdown",
    "id": "fab8c40d",
    "metadata": {},
+   "source": [
+    "**4. How does SQL differ from other data manipulation and querying languages, and what are some common use cases where SQL excels in handling large datasets and performing complex queries efficiently?**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eeadf1d7",
+   "metadata": {},
+   "source": [
+    "SQL **(Structured Query Language)** is used to **retrieve and manage data** in **relational database systems**. It allows us to perform operations like **creating databases, extracting information**, and doing **CRUD operations** (Create, Read, Update, Delete).\n",
+    "\n",
+    "SQL stores data in **rows and columns**, which makes it efficient for organizing and accessing data. It also performs very well when handling **large datasets** and running **complex queries** such as **joins, filters, and aggregations**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba2fcf81",
+   "metadata": {},
    "source": []
   }
  ],
