interview questions and research

--- a/Interview-Questions/interview_questions_03-04-2025.ipynb
+++ b/Interview-Questions/interview_questions_03-04-2025.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 81,
    "id": "492e6f69",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,11 @@
     "import pandas as pd \n",
     "import matplotlib.pyplot as plt \n",
     "import seaborn as sns \n",
-    "import numpy as np "
+    "import numpy as np \n",
+    "\n",
+    "import warnings \n",
+    "\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
