--- a/Embryo-Project-Deeplearning/research/Blueprints.ipynb
+++ b/Embryo-Project-Deeplearning/research/Blueprints.ipynb
@@ -35,9 +35,55 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "64284be7",
+   "metadata": {},
+   "source": [
+    "## Step Two\n",
+    "###  Data Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "afca8a75",
+   "metadata": {},
+   "source": [
+    "- Image Collection  ✅\n",
+    "\n",
+    "  Collect all images into one folder and assign clear, correct labels for each image. Make sure everything is well organized ✅🗂️🧠\n",
+    "\n",
+    "  - Example labels like this\n",
+    "   \n",
+    "    8-cell Grade A, 8-cell Grade B, 8-cell Grade C, Morula Grade A, Morula Grade B, Morula Grade C, Blastocyst Grade A, Blastocyst Grade B, Blastocyst Grade C, Error Images\n",
+    "\n",
+    "\n",
+    "- Standard Format .png \n",
+    "\n",
+    "    - I am using standard .png format because this project is medical-related. I chose .png since it ensures no data loss, which is important for accuracy.\" 🧠🩺🖼️\n",
+    "\n",
+    "      - No quality loss (PNG format is lossless, so image details stay safe)\n",
+    "      - Better for analysis (Clear images help AI/ML models work better)\n",
+    "      - Trusted in healthcare (Many hospitals use PNG for accurate visuals)\n",
+    "\n",
+    "- Resize\n",
+    "\n",
+    "- Convert RGB 👉 Grayscale\n",
+    "\n",
+    "- Reshape (already changed)\n",
+    "\n",
+    "- Data Augmentation \n",
+    "\n",
+    "- convert to array \n",
+    "\n",
+    "- Normalization \n",
+    "\n",
+    "- Split Data (train, test)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64284be7",
+   "id": "c0ee067d",
    "metadata": {},
    "outputs": [],
    "source": []
