--- a/Embryo-Project-Deeplearning/research/Blueprints.ipynb
+++ b/Embryo-Project-Deeplearning/research/Blueprints.ipynb
@@ -67,7 +67,7 @@
     "\n",
     "- Resize\n",
     "\n",
-    "- Convert RGB 👉 Grayscale\n",
+    "- Convert RGB 👉 Gray Scale\n",
     "\n",
     "- Reshape (already changed)\n",
     "\n",
@@ -76,6 +76,8 @@
     "- convert to array \n",
     "\n",
     "- Normalization \n",
+    "\n",
+    "- Check Duplicate values \n",
     "\n",
     "- Split Data (train, test)"
    ]
